# hone

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .trivyignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.release  LICENSE  Makefile  README.md
.claude/: settings.json
.claude/hooks/: format-rust.sh  lint-check.sh
.claude/skills/code-quality/: SKILL.md
.claude/skills/performance-audit/: SKILL.md
.claude/skills/security-review/: SKILL.md
.github/workflows/: docker.yml  docs.yml  pages.yml  trivyignore-audit.yml  ux-tests.yml
config/: models.toml
crates/hone-cli/: Cargo.toml
crates/hone-cli/src/: cli.rs  main.rs  tests.rs
crates/hone-cli/src/commands/: backup.rs  core.rs  entities.rs  import.rs  mod.rs  ollama.rs  prompts.rs  rebuild.rs  receipts.rs  reports.rs  serve.rs  status.rs  subscriptions.rs  tags.rs  training.rs  transactions.rs
crates/hone-core/: Cargo.toml
crates/hone-core/src/: context.rs  detect.rs  error.rs  export.rs  import.rs  lib.rs  model_router.rs  models.rs  ollama.rs  prompts.rs  tags.rs  test_utils.rs  tools.rs  training.rs  training_pipeline.rs
crates/hone-core/src/ai/: anthropic_compat.rs  mock.rs  mod.rs  ollama.rs  openai_compatible.rs  orchestrator.rs  parsing.rs  types.rs
crates/hone-core/src/backup/: local.rs  mod.rs  r2.rs
crates/hone-core/src/db/: accounts.rs  alerts.rs  backup.rs  entities.rs  feedback.rs  import_history.rs  insights.rs  mod.rs  ollama_metrics.rs  receipts.rs  reports.rs  subscriptions.rs  tags.rs  tests.rs  transaction_filter.rs  transactions.rs
crates/hone-core/src/insights/: engine.rs  expense_forecaster.rs  mod.rs  savings_opportunity.rs  spending_explainer.rs  types.rs
crates/hone-core/tests/: integration_tests.rs
crates/hone-server/: Cargo.toml
crates/hone-server/src/: lib.rs  scheduler.rs  tests.rs
crates/hone-server/src/handlers/: accounts.rs  alerts.rs  audit.rs  auth.rs  backup.rs  detection.rs  entities.rs  explore.rs  export.rs  feedback.rs  import_history.rs  insights.rs  locations.rs  mileage.rs  mod.rs  ollama.rs  receipts.rs  reports.rs  splits.rs  subscriptions.rs  suggestions.rs  tags.rs  training.rs  transactions.rs  trips.rs
crates/hone-server/src/mcp/: mod.rs  tools.rs
deploy/: .env.example  docker-compose.yml
docs/: .eleventyignore  DETECTION.md  FEATURES.md  SPLITS_DESIGN.md  backup.md  deployment.md  index.md  llms.txt  mcp.md  ollama.md  roadmap.md  status.md
docs/design/: architecture.md  email-receipts.md  explore-mode.md  index.md  insight-engine.md  model-router.md  receipts.md
docs/site/: eleventy.config.js  package-lock.json  package.json  wrangler.toml
docs/site/_layouts/: base.njk
docs/site/theme/: style.css
prompts/: analyze_duplicates.md  classify_merchant.md  classify_subscription.md  duplicate_analysis_agent.md  evaluate_receipt_match.md  explain_spending.md  explore_agent.md  normalize_merchant.md  normalize_merchant_with_context.md  parse_receipt.md  spending_analysis_agent.md  suggest_entity.md  suggest_split.md
samples/: chase_sample.csv  test_data.csv
scripts/: train.sh
site/: index.html  wrangler.toml
ui/: dprint.json  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/e2e/: alerts.spec.ts  dashboard.spec.ts  global-setup.ts  import.spec.ts  reports.spec.ts  seed-test-data.sh  subscriptions.spec.ts  tags.spec.ts  transactions.spec.ts  ux-audit.spec.ts
ui/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
ui/src/components/Alerts/: AlertCard.tsx  AlertDetailModal.tsx  AlertsList.tsx  index.ts
ui/src/components/Dashboard/: AlertItem.tsx  Dashboard.tsx  RecentActivity.tsx  SpendingSnapshot.tsx  TopCategories.tsx  UpcomingCharges.tsx  index.ts
ui/src/components/Explore/: ExplorePage.tsx
ui/src/components/Feedback/: FeedbackPage.tsx
ui/src/components/Import/: EditAccountModal.tsx  ImportDetailModal.tsx  ImportHistoryPage.tsx  ImportView.tsx  NewAccountModal.tsx  index.ts
ui/src/components/Insights/: InsightCard.tsx  InsightsWidget.tsx
ui/src/components/Ollama/: OllamaPage.tsx  index.ts
ui/src/components/Receipts/: ReceiptsPage.tsx  index.ts
ui/src/components/Reports/: MerchantsTab.tsx  ReportsPage.tsx  SpendingTab.tsx  SubscriptionsTab.tsx  TrendsTab.tsx  index.ts
ui/src/components/Subscriptions/: SubscriptionDetailModal.tsx  SubscriptionItem.tsx  SubscriptionsList.tsx  index.ts
ui/src/components/Tags/: TagTreeNode.tsx  TagsPage.tsx  index.ts  modals.tsx
ui/src/components/Transactions/: BulkTagModal.tsx  SplitsModal.tsx  TransactionItem.tsx  TransactionsList.tsx  index.ts
ui/src/components/Transactions/tabs/: LocationTab.tsx  ReceiptsTab.tsx  SplitsTab.tsx  TagsTab.tsx  index.ts
ui/src/components/common/: FeedbackButton.tsx  Footer.tsx  StatCard.tsx  TagBadge.tsx  index.ts
ui/src/hooks/: index.ts  useHashRouter.ts
ui/src/utils/: date.ts
